--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
 				background-color: white; 
 			}
 		</style>
+
+	<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+
 </head>
 
 <body>
-	<div class="container">
+	<div class="container" id="app">
 
 	<form method="post">
 
@@ -28,7 +32,7 @@
 				
 				<div class="form-group">
 					<label>Task Name</label>
-					<input type="text" name ="taskName" class="form-control ">
+					<input v-model=" item" type="text" name ="taskName" class="form-control ">
 
 				</div>
 			</div>
@@ -46,7 +50,7 @@
 		
 		
 
-		<button type="submit" class="btn btn-primary btn-block">Add Task</button>
+		<button v-on:click="addTodo" type="button" class="btn btn-primary btn-block">Add Task</button>
 	</form>
 
 	
@@ -54,14 +58,9 @@
 
 		<h3>Todo items</h3>
 
-		<ul class="list-group">
-			<li class="list-group-item d-flex justify-content-between align-items-center">
-				Javascript Assignment
-				<span class="badge badge-primary badge-pill">5 days</span>
-			</li>
-
+		<ul>
+			<li v-for="todo in todos">{{ todo }} </li>
 		</ul>
-		
 	</div>
 
 
